infra/k8s/auth-depl.yaml
# Deployment 설정
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  # auth pod 1개만 생성
  replicas: 1
  # 활용할 Pod 주소 설정
  selector:
    matchLabel:
      app: auth
  # Pod를 생성하는 방법 설명
  template:
    # 메타데이터 설정
    metadata:
      labels:
        app: auth
    # Pod가 어떻게 동작해야할지 설정
    spec:
      containers:
        # 로깅용 이름
        - name: auth
          image: ticketmaster/auth
---
# Service 설정
apiVersion: v1
kind: Service
# 서비스 메타데이터
metadata:
  name: auth-srv
# 생성할 스펙
spec:
  # app: auth에 해당하는 모든 프로젝트 선택
  selector:
    app: auth
  # TCP 포트 열어주기
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
